assets/css/compiled/theme.css
/* ... */
@media (min-width: 992px) {
  aside.cta-quote {
    padding: 300px 0;
  }
  aside.cta-quote span.quote {
    font-size: 30px;
    line-height: 42px;
  }
}
@media (min-width: 1025px) {
  aside.cta-quote {
    background-attachment: fixed;
  }
}
.testimonials {
  text-align: center;
}
.testimonials .testimonials-carousel .item {
  padding: 0;
}
.testimonials .testimonials-carousel .item p.quote {
  margin-bottom: 30px;
}
.testimonials .testimonials-carousel .item .testimonial-info {
  margin-bottom: 30px;
}
.testimonials .testimonials-carousel .item .testimonial-info .testimonial-img {
  display: inline-block;
  height: 50px;
  width: 50px;
  margin-right: 10px;
}
.testimonials .testimonials-carousel .item .testimonial-info .testimonial-author {
  display: inline-block;
}
.testimonials .testimonials-carousel .item .testimonial-info .testimonial-author .name {
  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 700;
}
.testimonials .testimonials-carousel .item .testimonial-info .testimonial-author hr.colored {
  margin: 3px auto;
  max-width: 50px;
}
.testimonials .testimonials-carousel .item .testimonial-info .testimonial-author p {
  margin: 0;
}
.testimonials .testimonials-carousel .item .testimonial-info .testimonial-author .stars {
  color: #f1c40f;
}
.testimonials .testimonials-carousel .owl-controls {
  margin-top: 0;
}
.testimonials .testimonials-carousel .owl-controls .owl-prev,
.testimonials .testimonials-carousel .owl-controls .owl-next {
  display: none;
  text-align: center;
  position: absolute;
  height: 60px;
  width: 40px;
  border-radius: 0 !important;
  line-height: 50px;
  font-size: 30px !important;
  margin: auto 0 !important;
  top: 0;
  bottom: 0;
  background-color: #ffc153 !important;
  color: white !important;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}
.testimonials .testimonials-carousel .owl-controls .owl-prev:hover,
.testimonials .testimonials-carousel .owl-controls .owl-next:hover {
  opacity: 1;
}
.testimonials .testimonials-carousel .owl-controls .owl-prev {
  left: 15px;
}
.testimonials .testimonials-carousel .owl-controls .owl-next {
  right: 15px;
}
@media (min-width: 768px) {
  .testimonials .testimonials-carousel .item {
    padding: 0 100px;
  }
  .testimonials .testimonials-carousel .owl-controls .owl-prev,
  .testimonials .testimonials-carousel .owl-controls .owl-next {
    display: block;
  }
}
.about-content {
  padding: 30px;
}
.about-carousel .item {
  margin: 15px;
  width: 350px;
  height: 350px;
  background-color: #333;
}
.about-carousel .item .caption {
  padding: 15px;
  color: rgba(255, 255, 255, 0.7);
  width: 100%;
  margin: auto;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}
.about-carousel .item .caption h3 {
  margin: 0;
}
.about-carousel .item .caption hr {
  margin: 5px auto;
  max-width: 50px;
}
.about-carousel .item .caption p {
  margin: 0;
}
.about-carousel .item .caption ul.social {
  margin-top: 5px;
}
.about-carousel .item .caption ul.social li a {
  color: rgba(255, 255, 255, 0.7);
}
.about-carousel .item .caption ul.social li a:hover,
.about-carousel .item .caption ul.social li a:focus {
  color: white;
}
.about-carousel .item p.team-detail {
  margin: 10px 40px;
  font-size: 14px;
}
.about-carousel .item p.team-detail .team-detail-title {
  font-weight: 500;
}
.about-carousel .owl-controls {
  margin-top: 0;
}
.about-carousel .owl-controls .owl-prev,
.about-carousel .owl-controls .owl-next {
  text-align: center;
  position: absolute;
  height: 60px;
  width: 40px;
  border-radius: 0 !important;
  line-height: 50px;
  font-size: 30px !important;
  margin: auto 0 !important;
  top: 0;
  bottom: 0;
  background-color: #ffc153 !important;
  color: white !important;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}
.about-carousel .owl-controls .owl-prev:hover,
.about-carousel .owl-controls .owl-next:hover {
  opacity: 1;
}
.about-carousel .owl-controls .owl-prev {
  left: 15px;
}
.about-carousel .owl-controls .owl-next {
  right: 15px;
}
.services .media {
  margin-bottom: 30px;
}
.services .media i.fa {
  height: 75px;
  width: 75px;
  line-height: 70px;
  text-align: center;
  border: 3px solid #222222;
  border-radius: 100%;
  font-size: 30px;
}
.services .media .media-body {
  padding-left: 15px;
}
.services .media .media-body h3 {
  margin-bottom: 15px;
}
.services .media .media-body ul {
  list-style: inside;
  padding: 0;
}
.services .media .media-body ul li {
  margin-bottom: 10px;
}
@media (min-width: 992px) {
  .services .media {
    margin-bottom: 0;
  }
}
.portfolio-carousel {
  padding: 0;
  color: white;
  background-color: #222222;
}
.portfolio-carousel .item {
  background-color: #222222;
  background: no-repeat center center scroll;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  padding: 50px 55px;
  text-align: center;
}
.portfolio-carousel .item .portfolio-image {
  margin-top: 50px;
}
.portfolio-carousel .item .project-details {
  padding: 0;
}
.portfolio-carousel .item .project-details img.client-logo {
  margin: 0 auto 25px;
}
.portfolio-carousel .item .project-details .project-name {
  display: block;
  font-size: 40px;
  line-height: 40px;
  margin-bottom: 5px;
  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 700;
}
.portfolio-carousel .item .project-details .project-description {
  display: block;
  font-size: 18px;
  line-height: 18px;
}
.portfolio-carousel .owl-controls {
  margin-top: 0;
}
/* ... */

